front_end/ui/legacy/components/source_frame/imageView.css
/*
 * Copyright 2014 The Chromium Authors
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file.
 */

.image-view {
  overflow: auto;
}

.image-view > .image {
  padding: 20px 20px 10px;
  text-align: center;
}

.image-view img.resource-image-view {
  max-width: 100%;
  max-height: 1000px;
  background-image: var(--image-file-checker);
  box-shadow: 0 5px 10px var(--sys-color-outline);
  user-select: text;
  -webkit-user-drag: auto;
}

