Network: ensure too large images are linked
We now support showing images up to 10mb in size via blob URLs, but that
change means that if you try to view the network preview for an image
larger than that you see...nothing.

This CL updates it so you see a link to open the image in a new tab. We
can't just show the image URL because of CSP restrictions.

screen/8MG9aA6ov9CcM4U

Bug: 503336217
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/7849515
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/ui/legacy/components/source_frame/imageView.css
+++ b/front_end/ui/legacy/components/source_frame/imageView.css
@@ -21,3 +21,16 @@
   user-select: text;
   -webkit-user-drag: auto;
 }
+
+.resource-image-unavailable {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: var(--sys-size-4);
+}
+
+.resource-image-unavailable devtools-icon {
+  color: var(--sys-color-primary);
+  width: var(--sys-size-7);
+  height: var(--sys-size-7);
+}
